# ISACLE

./: ARCHITECTURE.md  README.md  cabal.project  isacle.cabal  stack.yaml
example/Example/: CpuBusSynth.hs  SimpleBusSynth.hs
src/: Core.hs  Isacle.hs
src/Core/: ALU.hs  Bus.hs  Decode.hs  Harvard.hs  Memory.hs  TH.hs
src/Core/Harvard/: CPU.hs  ISA.hs  Pipeline.hs
src/Core/Periph/: DMA.hs  GPIO.hs  Interrupt.hs  Timer.hs  UART.hs
src/Isacle/: ALU.hs  Bus.hs  Decode.hs  Harvard.hs  Memory.hs  System.hs  TH.hs
src/Isacle/CPU/: Dummy.hs
src/Isacle/Harvard/: CPU.hs  ISA.hs  Pipeline.hs
src/Isacle/Periph/: DMA.hs  GPIO.hs  Interrupt.hs  Timer.hs  UART.hs
src/Isacle/System/: Builder.hs  BusArch.hs  BusDef.hs  Circuit.hs  Generate.hs  Periph.hs  Spec.hs  Synth.hs
tests/: TestDSL.hs  unittests.hs
tests/Tests/Core/: GPIO.hs
tests/Tests/Core/Harvard/: ISA.hs  Pipeline.hs
tests/Tests/Core/Periph/: DMA.hs  Timer.hs  UART.hs
tests/Tests/Isacle/: GPIO.hs
tests/Tests/Isacle/Harvard/: ISA.hs  Pipeline.hs
tests/Tests/Isacle/Periph/: DMA.hs  Timer.hs  UART.hs
tests/Tests/Isacle/System/: Bus.hs
