cabal-version:       2.4
name:                isacle
version:             0.1
license:             MIT
author:              Jonathan Fraser <jonathanfras@gmail.com>
maintainer:          Jonathan Fraser <jonathanfras@gmail.com>
build-type:          Simple

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    InstanceSigs
    KindSignatures
    LambdaCase
    NamedFieldPuns
    NoStarIsType
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    TemplateHaskell
    QuasiQuotes
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -haddock
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fexpose-all-unfoldings
    -fno-worker-wrapper
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields
  build-depends:
    base,
    clash-prelude >= 1.8.4 && < 1.10,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Core
    Core.ALU
    Core.Decode
    Core.Memory
    Core.Harvard
    Core.Harvard.ISA
    Core.Harvard.CPU
    Core.Harvard.Pipeline
    Core.Periph.GPIO
  default-language: Haskell2010

executable clash
  main-is: bin/Clash.hs
  default-language: Haskell2010
  build-depends: base, clash-ghc, isacle
  if !os(Windows)
    ghc-options: -dynamic

executable clashi
  main-is: bin/Clashi.hs
  default-language: Haskell2010
  build-depends: base, clash-ghc, isacle
  if !os(Windows)
    ghc-options: -dynamic

test-suite test-library
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: unittests.hs
  other-modules:
    Tests.Core.Harvard.ISA
    Tests.Core.Harvard.Pipeline
    Tests.Core.GPIO
  build-depends:
    base,
    isacle,
    hedgehog,
    tasty >= 1.2 && < 1.6,
    tasty-hedgehog,
    tasty-th
