cabal-version:       2.4
name:                isacle
version:             0.1
license:             MIT
synopsis:            ISA-agnostic Clash CPU core building blocks
description:         Generic Clash modules extracted from clavr for building CPU cores.
category:            Hardware
author:              Jonathan Fraser <jonathanfras@gmail.com>
maintainer:          Jonathan Fraser <jonathanfras@gmail.com>
build-type:          Simple

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    InstanceSigs
    KindSignatures
    LambdaCase
    NamedFieldPuns
    NoStarIsType
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    TemplateHaskell
    QuasiQuotes
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -haddock
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fexpose-all-unfoldings
    -fno-worker-wrapper
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields
  build-depends:
    base >= 4.12 && < 4.22,
    clash-prelude >= 1.8.4 && < 1.11,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    template-haskell >= 2.16,
    bytestring

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Core
    Core.ALU
    Core.Bus
    Core.Decode
    Core.Memory
    Core.TH
    Core.Harvard
    Core.Harvard.ISA
    Core.Harvard.CPU
    Core.Harvard.Pipeline
    Core.Periph.GPIO
    Core.Periph.Interrupt
    Core.Periph.Timer
    Core.Periph.UART
    Core.Periph.DMA
  default-language: Haskell2010

test-suite test-library
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: unittests.hs
  other-modules:
    Tests.Core.Harvard.ISA
    Tests.Core.Harvard.Pipeline
    Tests.Core.GPIO
    Tests.Core.Periph.Timer
    Tests.Core.Periph.UART
    Tests.Core.Periph.DMA
  build-depends:
    base >= 4.12 && < 4.22,
    isacle,
    hedgehog,
    tasty >= 1.2 && < 1.6,
    tasty-hedgehog,
    tasty-th
