cabal-version:       2.4
name:                isacle
version:             0.1
license:             MIT
synopsis:            ISA-agnostic Clash CPU core building blocks
description:         Generic Clash modules extracted from clavr for building CPU cores.
category:            Hardware
author:              Jonathan Fraser <jonathanfras@gmail.com>
maintainer:          Jonathan Fraser <jonathanfras@gmail.com>
build-type:          Simple

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    InstanceSigs
    MultiParamTypeClasses
    KindSignatures
    LambdaCase
    NamedFieldPuns
    NoStarIsType
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    AllowAmbiguousTypes
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    TemplateHaskell
    QuasiQuotes
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -haddock
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fexpose-all-unfoldings
    -fno-worker-wrapper
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields
  build-depends:
    base >= 4.12 && < 4.22,
    clash-prelude >= 1.8.4 && < 1.11,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    template-haskell >= 2.16,
    bytestring,
    containers >= 0.6,
    transformers >= 0.5

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Isacle
    Isacle.ALU
    Isacle.Bus
    Isacle.Decode
    Isacle.Memory
    Isacle.TH
    Isacle.Harvard
    Isacle.Harvard.ISA
    Isacle.Harvard.CPU
    Isacle.Harvard.Pipeline
    Isacle.Periph.GPIO
    Isacle.Periph.Interrupt
    Isacle.Periph.Timer
    Isacle.Periph.UART
    Isacle.Periph.DMA
    Isacle.System
    Isacle.System.Spec
    Isacle.System.Periph
    Isacle.System.BusDef
    Isacle.System.BusArch
    Isacle.System.Builder
    Isacle.System.Circuit
    Isacle.System.Generate
    Isacle.System.Synth
    Isacle.CPU.Dummy
  default-language: Haskell2010

-- Clash synthesis executable: cabal run isacle:clash -- Example.SimpleBusSynth --vhdl
executable clash
  default-language: Haskell2010
  main-is: bin/Clash.hs
  build-depends: base, clash-ghc, isacle, isacle-examples
  if !os(Windows)
    ghc-options: -dynamic

library isacle-examples
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: example
  exposed-modules:
    Example.SimpleBusSynth
    Example.CpuBusSynth
  build-depends:
    base >= 4.12 && < 4.22,
    clash-prelude >= 1.8.4 && < 1.11,
    isacle

executable test-dsl
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestDSL.hs
  build-depends:
    base >= 4.12 && < 4.22,
    isacle,
    clash-prelude >= 1.8.4 && < 1.11

test-suite test-library
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: unittests.hs
  other-modules:
    Tests.Isacle.Harvard.ISA
    Tests.Isacle.Harvard.Pipeline
    Tests.Isacle.GPIO
    Tests.Isacle.Periph.Timer
    Tests.Isacle.Periph.UART
    Tests.Isacle.Periph.DMA
    Tests.Isacle.System.Bus
  build-depends:
    base >= 4.12 && < 4.22,
    isacle,
    hedgehog,
    tasty >= 1.2 && < 1.6,
    tasty-hedgehog,
    tasty-th
